2012-02-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ovf2ovp.ch: Allow arbitrarily large TFM files as in TFtoPL.

	* opl2ofm.ch, ovp2ovf.ch: Avoid name conflict; MinGW defines
	`byte' in <rpcndr.h>.

2012-02-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ofm2opl.web, ovf2ovp.web: Both nl and lig_size are in words,
	so the multiplication by 4 is not needed.

	* ofm2opl.ch: Handle tfm_file_array as in TFtoPL, i.e., allocate
	with a small initial size and reallocate as needed.

	* ofm2opl.ch, opl2ofm.web: Remove unused constant tfm_size.

2012-01-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* opl2ofm.web, ovp2ovf.web: Interpret "--" as "+", not "-".

	* realnum.test, tests/realnum.opl, tests/realnum.out (new):
	Shell script and data for a new test.
	* am/omegaware.am: Add the new test.

2012-01-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ofm2opl.web, ovf2ovp.web: Add missing space in error message.

2011-12-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ovf2ovp.web, ovp2ovf.web: Replace 65535 etc by numeric Web
	macros (can be up to 2^{30} for otangle).

	* ovf2ovp.up, ovp2ovf.up (new): Changes for upTeX versions.
	* am/omegaware.am: Adapted.

2011-12-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* opl2ofm.web: Correctly compute mem_size=max_char*4+8;
	* ofm2opl.web, ovf2ovp.web: Drop unused mem_size.

	* ovf2ovp.ch: Shorten change set (for upTeX version).

2011-12-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* selectfont.test, tests/sample.out, tests/sample.ovp,
	tests/sample0-h.opl (new): Shell script and data for a new test.
	* am/omegaware.am: Add the new test.

2011-04-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	* odvicopy.ch (comment): Do not declare as unsigned.
	(do_pre): Apply ucharcast() to xord[] index.

2010-04-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* opl2ofm.ch, ovp2ovf.ch: Bug fix, from ../ptexdir/ppltotf.ch by
	Ken Nakano <nakano@nextsolution.co.jp>.
